style: fixed input width on ios

--- a/components/forms/form.module.css
+++ b/components/forms/form.module.css
@@ -260,7 +260,6 @@
 @media screen and (max-width: 768px) {
   .hero {
     width: 100%;
-    align-items: center;
     justify-content: center;
     text-align: left;
   }
